// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properties are passed element 1`] = `
<input
  id="password-id"
  name="password-name"
  type="password"
/>
`;

exports[`Type property cannot be overwritten 1`] = `
<input
  id="password-id"
  name="password-name"
  type="text"
/>
`;
